# RackedIO_Board_FW

./: .gitmodules  CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/corei/rackedio/: Kconfig  Kconfig.defconfig  board.cmake  board.yml  rackedio.dts  rackedio.yml  rackedio_defconfig
boards/corei/rackedio/dts/bindings/: preamp.yml
boards/corei/rackedio/support/: openocd.cfg
src/: main.cpp
src/audio/: i2s.cpp  i2s.h  pre.cpp  pre.h  pre_phydef.h
src/ihm/: rgb.cpp  rgb.h
src/net/: EthFiltering.c  EthFiltering.h  EthernetRouter.cpp  EthernetRouter.h  RingBuffer.cpp  RingBuffer.h  SockSvc.c
